@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-30T01:20:57Z",
+  "timestamp" : "2022-05-30T08:21:55Z",
   "count_outdated" : 300,
   "uniques_outdated" : 164,
-  "count" : 327,
-  "uniques" : 184,
+  "count" : 328,
+  "uniques" : 185,
   "clones" : [
     {
       "timestamp": "2022-05-16T00:00:00Z",
@@ -63,6 +63,13 @@
     },
     {
       "timestamp": "2022-05-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-30T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
