@@ -1,3 +1,10 @@
+2022-05-30T08:21:55Z:
+* notice: last 14d: unq all: 12 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 164 300 / 184 327
+* notice: next accum: outdated-unq outdated-all / unq all: 164 300 / 185 328
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-30]
+
 2022-05-30T01:20:57Z:
 * notice: last 14d: unq all: 12 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 163 298 / 184 326
